src/components/BottomNav/BottomNav.scss
.am-tab-bar-bar {
    transition-property: transform;
    will-change: transform;
    &-hidden-bottom {
        bottom: initial;
        height: initial;
        transform: translateY(100%);
    }
}

.am-tabs-content-wrap {
    min-height: 0;
}

.bottom-nav {
    border-top: 1px solid #ddd;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    padding: 0.6rem 0;

    bottom: 0;
    max-height: 60px;
    position: fixed;
    transition: transform 0.3s ease-in;
    will-change: transform;
    width: 100%;
    z-index: 100;

    &.--hidden {
        transform: translateY(100%);
    }

    & .nav-item {
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 0.8rem;

        & > .anticon {
            font-size: 1.4rem;
        }
    }
}

